clone-landing-page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,19 @@
-body {
-  margin: 0;
-}
+@import "./utils/variables.scss";
+@import "./utils/mixins";
+
+
+
+@import "./blocks/header";
+@import "blocks/icon";
+@import "blocks/menu";
+@import "blocks/top-bar";
+@import "blocks/nav";
+@import "blocks/page";
+@import "blocks/section-title";
+@import "blocks/main";
+@import "blocks/products";
+@import "blocks/recommended";
+@import "blocks/about.scss";
+@import "blocks/categories.scss";
+@import "blocks/contacts.scss";
+
