--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -97,6 +97,8 @@ padding-bottom: 64px;
 }
 
 .input {
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
   color: #7E7E83;
   font-weight: 400;
   font-size: 14px;
@@ -133,6 +135,7 @@ padding-bottom: 64px;
 }
 
 .input:hover {
+  transition: none;
   color: #1B2129;
   border: 1px solid #DBDBDB;
 }
@@ -170,6 +173,7 @@ padding-bottom: 64px;
 }
 
 .send-button:hover {
+  transition: 0.3s;
   color: #ffff;
   background-color: $main-text-color;
 }
