--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -10,11 +10,14 @@
   }
 
   &__box {
+
     @include pageGrid;
     @include contentPaddingInline;
+
   }
 
   &__title {
+    margin-bottom: 24px;
     grid-column: 1 / -1;
     @include onTablet {
       grid-column: span 3;
@@ -33,12 +36,14 @@
     font-size: 16px;
     letter-spacing: 0.15px;
     line-height: 140%;
-
+    margin-bottom: 48px;
     @include onTablet {
+      margin-bottom: 120px;
       grid-column: span 3;
     }
 
     @include onDesktop {
+      margin-bottom: 120px;
       grid-column: span 5;
     }
   }
