--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -13,6 +13,8 @@ padding-bottom: 64px;
   }
 
 &__form {
+
+
   @include pageGrid;
   grid-column: 1 / -1;
 
@@ -59,6 +61,7 @@ padding-bottom: 64px;
   }
 
   &__information__link {
+    @include hover(transform, scale(1.25));
     width: fit-content;
     text-decoration: none;
     font-weight: 400;
@@ -67,6 +70,9 @@ padding-bottom: 64px;
     letter-spacing: 0.15px;
     color: #191919;
 
+    // &:hover {
+    //   transform: scale(1.15);
+    // }
   }
 
   &__box {
@@ -93,7 +99,6 @@ padding-bottom: 64px;
   @include onDesktop {
     grid-column: 1 / 7;
   }
-
 }
 
 .input {
