--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -61,7 +61,7 @@ padding-bottom: 64px;
   }
 
   &__information__link {
-    @include hover(transform, scale(1.25));
+    @include hover(transform, scale(1.1));
     width: fit-content;
     text-decoration: none;
     font-weight: 400;
@@ -69,10 +69,7 @@ padding-bottom: 64px;
     line-height: 140%;
     letter-spacing: 0.15px;
     color: #191919;
-
-    // &:hover {
-    //   transform: scale(1.15);
-    // }
+    display: block;
   }
 
   &__box {
